AKS/AKSApp/demoappdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-dotnet-deployment
  labels:
    app: dotnetd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnetd
  template:
    metadata:
      labels:
        app: dotnetd
    spec:
      containers:
        - name: dotnetd
          image: azacrforsas.azurecr.io/welcometodotnet
          ports:
            - containerPort: 80
        #  imagePullSecrets:
        #    - name: azacrforsas
        #      imagePullPolicy: Always                         
         
---
apiVersion: v1
kind: Service
metadata:
  name: dotnetd-loadbalancer-service
  labels:
    app: dotnetd
spec:
  type: LoadBalancer
  selector:
    app: dotnetd
  ports:
    - port: 80
      targetPort: 80
